--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <title> GEOG 485L/585L -- My First Map </title>
+</head>
+<body>
+    <p>
+        My first map will appear here:
+    </p>
+    <div id="mapId" style="height:400px; width: 600px"></div>
+    <script>
 
+        // Bandelier Hall East lat/long: 35.08
+        // create a map variable "mymap" that points tot he map palced in the mapId <div>
+        //zoom the view on Bandelier Hall East building at a 17 zoom level
+        var mymap = L.map('mapId').setView([35.0843, -106.6241], 17);
+        
+        // create a variable named "osm" that is used to hold OpenStreetMap tile layer
+
+        var osm = new L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+        // add the OSM tile layer to the map
+        osm.addTo(mymap);
+
+        // add a marker on the tile layer
+        var marker = L.marker([35.0843, -106.6241]).addTo(mymap);
+
+        // add a popup
+        //Popups are usually used when you want to attach some information to a particular object on a map
+        marker.bindPopup("<b>Hello world!<b> <br><i>Bandelier Hall East</i> <br>University of New Mexico").openPopup();
+        // <b> tag used to bold text
+        // <br> tag for newline
+        // <i> tag for italic text
+
+    </script>
+</body>
+</html>
