--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        My first map will appear here:
+        Welcome to my personal website:
     </p>
     <div id="mapId" style="height:400px; width: 600px"></div>
     <script>
