--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@
 
     <div id="webapp" class="container text-left">
         <h3>MUSEUM SPECIMEN MAP</h3>
-        <p>Coming soon...</p>
+        <b>
+            <a href="/MyWebApp/index.html">Link </a>
+            and
+            <a href="https://www.youtube.com/watch?v=MN-iFgIKtEE"> Video Demo </a>
+        
+        <p>The goal of this project is to make museum data more accessible to the public through the creation of an interactive map displaying museum specimens across the United States. The data comes from the Museum of Southwestern Biology. Click on the links above to learn more about the collections there!</p>
     </div> 
 
 
