--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             New
             Mexico. My research focuses on using camera traps to study the timing of mammal visitation to water at
             Sevilleta National Wildlife Refuge.</p>
-            <p>When I'm not working I like to go hiking with my dog, play board games with friends, and play tennis.</p>
+        <p>When I'm not working I like to go hiking with my dog, play board games with friends, and play tennis.</p>
         <div class="row">
             <div class="col-sm-4">
                 <img src="images/camacho_headshot.jpg" class="" alt="Random Name" width="80%" height="80%">
@@ -137,8 +137,14 @@
 
     <div id="webapp" class="container text-left">
         <h3>MUSEUM SPECIMEN MAP</h3>
-        <p>Coming soon...</p>
-    </div> 
+        <b><a href="https://juancamacho-1.github.io/MyWebApp/index.html">Link </a> and <a
+                href="https://www.youtube.com/watch?v=MN-iFgIKtEE">Demo Video </a> for Web App</b>
+        <br>
+        <br>
+        <p> The goal of this project is to make museum data more accessible to the public through the creation of an
+            interactive map displaying museum specimens across the United States. The data comes from the Museum of
+            Southwestern Biology. Click on the links above to learn more about the collections there! </p>
+    </div>
 
 
 
